If statements placed in else to fix output always being the error colour gray

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container-fluid bg-secondary text-light p-5">
-    <div class="container bg-secondary p-5">
-        <h1 class="display-4">RailsHeroku</h1>
+<div class="container-fluid <%= @api_colour %> text-light p-1">
+    <div class="container <%= @api_colour %> p-1">
+        <h1 class="display-4"><%= @final_output %></h1>
         <hr>
         <%# <p>Go to My Website</p>
         <a href="#" class="btn btn-primary">link</a> %>
