Fixed error of form helper

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <div class="container <%= @api_colour %> p-1">
         <h1 class="display-4"><%= @final_output %></h1>
         <hr>
-        <%# <p>Go to My Website</p>
-        <a href="#" class="btn btn-primary">link</a> %>
+        <h3><%= @description %></h3>
+        <a href="#" class="btn btn-primary">link</a>
     </div>
 </div>
