--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -21,10 +21,16 @@
           </ul>
         </li> %>
       </ul>
-      <form class="d-flex">
+
+      <%= form_with url: "/search", class: "d-flex", method: :get do |form| %>
+        <%= form.text_field :query, class: "form-control me-2" %>
+        <%= form.submit "Search", class: "btn btn-outline-success" %>
+      <% end %>
+
+      <%# <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> %>
     </div>
   </div>
 </nav>
