--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -6,24 +6,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <%# <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <%# <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
         </li> %>
       </ul>
 
-      <%= form_with url: "/search", class: "d-flex", method: :get do |form| %>
-        <%= form.text_field :query, class: "form-control me-2" %>
+      <%= form_with url: zipcode_path, class: "d-flex", local: true, data: { turbo: false }, method: :post do |form| %>
+        <%= form.text_field :zipcode, class: "form-control me-2", placeholder: "Zipcode" %>
         <%= form.submit "Search", class: "btn btn-outline-success" %>
       <% end %>
 
